styles nav -- desktop

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,27 @@
 // Navigation Styles here
+.header {
+  nav {
+    border-bottom: 2px dashed @navigation-border;
+    div {
+      .flex(row, wrap, space-between, center);
+    }
+    a {
+      color: @font-color;
+      text-decoration: none;
+    }
+    .nav-links {
+      .flex(row, wrap, space-evenly, center);
+      flex: 0 1 45%;
+      li {
+        .flex();
+        height: 80px;
+      }
+      a {
+        padding: 5px;
+        text-decoration: none;
+        color: @font-color;
+        font-size: 1.3rem;
+      }
+    } // end .nav-links
+  } // end nav
+} // end header
