--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,39 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.header nav {
+  border-bottom: 2px dashed #C0C0C0;
+}
+.header nav div {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.header nav a {
+  color: #212529;
+  text-decoration: none;
+}
+.header nav .nav-links {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  flex: 0 1 45%;
+}
+.header nav .nav-links li {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+}
+.header nav .nav-links a {
+  padding: 5px;
+  text-decoration: none;
+  color: #212529;
+  font-size: 1.3rem;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
