--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,7 @@
 // Mixins in here
+.flex (@direction: row, @wrap: wrap, @justify: center, @align: center) {
+  display: flex;
+  flex-flow: @direction @wrap;
+  justify-content: @justify;
+  align-items: @align;
+}
