--- a/css/index.css
+++ b/css/index.css
@@ -212,6 +212,13 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.main-header {
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 10px;
+}
+.main-header img {
+  padding-bottom: 20px;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
