--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,19 @@
-.home {
+.main-header {
+  border-bottom: 2px dashed @navigation-border;
+  padding-bottom: 10px;
 
+  img {
+    padding-bottom: 20px;
+  }
+} // .main-header
+
+.home {
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -58,4 +64,4 @@
       margin-bottom: 30px;
     }
   }
-}// home
+} // home
