--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,6 +62,11 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .button-signup(@padding: 10px, @radius: 10px, @width: 100%);
+        font-size: 1.5rem;
+      }
     }
   }
 } // home
