adds padding to .container on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -134,14 +134,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
 }
 h1 {
   font-size: 4rem;
@@ -167,6 +167,11 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+@media screen and (max-width: 500px) {
+  .container {
+    padding: 0 20px;
+  }
 }
 .header nav {
   border-bottom: 2px dashed #c0c0c0;
