--- a/less/global.less
+++ b/less/global.less
@@ -52,3 +52,44 @@ img {
     padding: 0 20px;
   }
 }
+//animations
+@-webkit-keyframes slide-right-fade-in {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(15px, 0, 0);
+  }
+}
+@-webkit-keyframes slide-left-fade-in {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(-15px, 0, 0);
+  }
+}
+@keyframes slide-right-fade-in {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(15px, 0, 0);
+  }
+}
+@keyframes slide-left-fade-in {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(-15px, 0, 0);
+  }
+}
