--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,6 +8,21 @@
   align-items: @align;
 }
 
+//animations
+.animation(
+  @duration: 200ms,
+  @timing-function: ease,
+  @delay: 0ms,
+  @iteration-count: 1,
+  @direction: normal,
+  @fill-mode: none,
+  @play-state: running,
+  @name
+  ) {
+  animation: @duration @timing-function @delay @iteration-count @direction
+    @fill-mode @play-state @name;
+}
+
 // buttons
 .button-signup(
   @color: @white,
@@ -25,7 +40,32 @@
   padding: @padding;
   border-radius: @radius;
   width: @width;
+  &::before,
+  &::after {
+    content: "🎉";
+    opacity: 0;
+    transform: translate3d(0, 0, 0);
+    display: inline-block;
+  }
   &:focus {
     box-shadow: 0 0 3px 0 @focus;
+    &::before {
+      .animation(
+        @duration: 200ms,
+        @timing-function: ease,
+        @fill-mode: forwards,
+        @name: slide-left-fade-in,
+        @iteration-count: 1
+      );
+    }
+    &::after {
+      .animation(
+        @duration: 200ms,
+        @timing-function: ease,
+        @fill-mode: forwards,
+        @name: slide-right-fade-in,
+        @iteration-count: 1
+      );
+    }
   }
 }
