adds more media queries for in-between brkpoints

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -71,8 +71,8 @@
   }
 } // home
 
-// Mobile Media Query
-@media @mobile {
+// large-mobile Media Query
+@media @large-mobile {
   .home {
     .content-section {
       .flex(
