--- a/less/variables.less
+++ b/less/variables.less
@@ -18,3 +18,5 @@
 
 // Media queries
 @mobile: ~"screen and (max-width: 500px)";
+@large-mobile: ~"screen and (max-width: 6000px)";
+@tablet: ~"screen and (max-width: 800px)";
