--- a/css/index.css
+++ b/css/index.css
@@ -263,6 +263,58 @@ img {
     height: initial;
   }
 }
+.destination-form {
+  border-top: 2px dashed #c0c0c0;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+.destination-form h2 {
+  text-align: center;
+}
+.destination-form div {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 500px;
+  margin: auto;
+}
+.destination-form fieldset {
+  margin: 20px 0;
+}
+.destination-form fieldset legend {
+  font-size: 1.6rem;
+  text-align: center;
+  width: 100%;
+  padding-bottom: 10px;
+}
+.destination-form .btn {
+  border: none;
+  outline: none;
+  background-color: #17a2b8;
+  color: #ffffff;
+  transition: 200ms;
+  padding: 10px;
+  border-radius: 10px;
+  width: 160px;
+  font-size: 1.5rem;
+}
+.destination-form .btn::before,
+.destination-form .btn::after {
+  content: "🎉";
+  opacity: 0;
+  transform: translate3d(0, 0, 0);
+  display: inline-block;
+}
+.destination-form .btn:focus {
+  box-shadow: 0 0 3px 0 #212529;
+}
+.destination-form .btn:focus::before {
+  animation: 200ms ease 0ms 1 normal forwards running slide-left-fade-in;
+}
+.destination-form .btn:focus::after {
+  animation: 200ms ease 0ms 1 normal forwards running slide-right-fade-in;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -354,7 +406,7 @@ img {
 .home .content-pick .destination .btn:focus::after {
   animation: 200ms ease 0ms 1 normal forwards running slide-right-fade-in;
 }
-@media screen and (max-width: 6000px) {
+@media screen and (max-width: 600px) {
   .home .content-section {
     display: flex;
     flex-flow: column wrap;
