--- a/less/index.less
+++ b/less/index.less
@@ -4,5 +4,6 @@
 @import "reset.less";
 @import "global.less";
 @import "navigation.less";
+@import "form.less";
 @import "footer.less";
 @import "home-page.less";
